-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u45, 9
-
Component/s: hotspot
-
b105
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8315216 | 8u401 | Ivan Bereziuk | P2 | Closed | Fixed | b01 |
| JDK-8098809 | 8u60 | Zoltan Majo | P2 | Closed | Won't Fix |
JDK 9-fastdebug b66 crash when ran simple HelloWorld with "-Xcomp -XX:+ZeroTLAB" options on Linux-x64 platform.
Running next command give following result(hs_err_pid20735.log is attached):
java -Xcomp -XX:+ZeroTLAB HelloWorld
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fd661276498, pid=20735, tid=0x00007fd677560700
#
# JRE version: Java(TM) SE Runtime Environment (9.0-b66) (build 1.9.0-ea-fastdebug-b66)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-ea-fastdebug-b66 compiled mode linux-amd64 compressed oops)
# Problematic frame:
# J 444 C1 jdk.internal.jimage.ImageLocation.decompress()V (154 bytes) @ 0x00007fd661276498 [0x00007fd661276160+0x338]
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c" (or dumping to /home/dmitry/bundles/jdk9/b66/fastdebug/bin/core.20735)
#
# An error report file with more information is saved as:
# /home/dmitry/bundles/jdk9/b66/fastdebug/bin/hs_err_pid20735.log
Compiled method (c1) 1562 443 2 jdk.internal.jimage.ImageLocation::getAttributeUTF8String (46 bytes)
total in heap [0x00007fd661275690,0x00007fd661275ed8] = 2120
relocation [0x00007fd6612757c0,0x00007fd661275880] = 192
main code [0x00007fd661275880,0x00007fd661275c80] = 1024
stub code [0x00007fd661275c80,0x00007fd661275d60] = 224
metadata [0x00007fd661275d60,0x00007fd661275d70] = 16
scopes data [0x00007fd661275d70,0x00007fd661275dc0] = 80
scopes pcs [0x00007fd661275dc0,0x00007fd661275eb0] = 240
dependencies [0x00007fd661275eb0,0x00007fd661275eb8] = 8
nul chk table [0x00007fd661275eb8,0x00007fd661275ed8] = 32
...
HelloWorld successfully execute when ran with "-Xint":
java -Xint -XX:+ZeroTLAB HelloWorld
Hello world!
JDK 8u45-fastdebug successfully executed with "-Xcomp -XX:+ZeroTLAB" options and HelloWorld class(but crashed without class, see below).
Also, different error reported when JDK 9-fastdebug ran without class specified:
java -Xcomp -XX:+ZeroTLAB
Exception in thread "main" java.lang.ExceptionInInitializerError
at sun.util.locale.provider.LocaleProviderAdapter.<clinit>(LocaleProviderAdapter.java:104)
at java.text.NumberFormat.getInstance(NumberFormat.java:859)
at java.text.NumberFormat.getInstance(NumberFormat.java:442)
at java.text.MessageFormat.subformat(MessageFormat.java:1271)
at java.text.MessageFormat.format(MessageFormat.java:865)
at java.text.Format.format(Format.java:157)
at java.text.MessageFormat.format(MessageFormat.java:841)
at sun.launcher.LauncherHelper.getLocalizedMessage(LauncherHelper.java:328)
at sun.launcher.LauncherHelper.initHelpMessage(LauncherHelper.java:341)
Caused by: java.lang.ArrayIndexOutOfBoundsException: -1163019586
at java.lang.AbstractStringBuilder.append(AbstractStringBuilder.java:626)
at java.lang.StringBuilder.append(StringBuilder.java:202)
at java.lang.invoke.LambdaForm.shortenSignature(LambdaForm.java:1367)
at java.lang.invoke.DirectMethodHandle.makePreparedLambdaForm(DirectMethodHandle.java:245)
at java.lang.invoke.DirectMethodHandle.preparedLambdaForm(DirectMethodHandle.java:188)
at java.lang.invoke.DirectMethodHandle.preparedLambdaForm(DirectMethodHandle.java:177)
at java.lang.invoke.DirectMethodHandle.make(DirectMethodHandle.java:84)
at java.lang.invoke.MethodHandles$Lookup.getDirectMethodCommon(MethodHandles.java:1656)
at java.lang.invoke.MethodHandles$Lookup.getDirectMethodNoSecurityManager(MethodHandles.java:1613)
at java.lang.invoke.MethodHandles$Lookup.getDirectMethodForConstant(MethodHandles.java:1798)
at java.lang.invoke.MethodHandles$Lookup.linkMethodHandleConstant(MethodHandles.java:1747)
at java.lang.invoke.MethodHandleNatives.linkMethodHandleConstant(MethodHandleNatives.java:399)
at sun.util.locale.provider.AuxLocaleProviderAdapter.<clinit>(AuxLocaleProviderAdapter.java:182)
... 9 more
JDK 8u45-fastdebug also affected, but crash reported in this case(without class name, hs_err_pid21138.log is attached):
java -Xcomp -XX:+ZeroTLAB
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fe1d8c9d368, pid=21138, tid=140608353769216
#
# JRE version: Java(TM) SE Runtime Environment (8.0_45-b33) (build 1.8.0_45-fastdebug-b33)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (25.45-b02-fastdebug compiled mode linux-amd64 compressed oops)
# Problematic frame:
# J 793 C2 java.lang.Class.getConstructor0([Ljava/lang/Class;I)Ljava/lang/reflect/Constructor; (103 bytes) @ 0x00007fe1d8c9d368 [0x00007fe1d8c9d320+0x48]
#
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/dmitry/bundles/jdk8u45/fastdebug/bin/hs_err_pid21138.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Running next command give following result(hs_err_pid20735.log is attached):
java -Xcomp -XX:+ZeroTLAB HelloWorld
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fd661276498, pid=20735, tid=0x00007fd677560700
#
# JRE version: Java(TM) SE Runtime Environment (9.0-b66) (build 1.9.0-ea-fastdebug-b66)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-ea-fastdebug-b66 compiled mode linux-amd64 compressed oops)
# Problematic frame:
# J 444 C1 jdk.internal.jimage.ImageLocation.decompress()V (154 bytes) @ 0x00007fd661276498 [0x00007fd661276160+0x338]
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c" (or dumping to /home/dmitry/bundles/jdk9/b66/fastdebug/bin/core.20735)
#
# An error report file with more information is saved as:
# /home/dmitry/bundles/jdk9/b66/fastdebug/bin/hs_err_pid20735.log
Compiled method (c1) 1562 443 2 jdk.internal.jimage.ImageLocation::getAttributeUTF8String (46 bytes)
total in heap [0x00007fd661275690,0x00007fd661275ed8] = 2120
relocation [0x00007fd6612757c0,0x00007fd661275880] = 192
main code [0x00007fd661275880,0x00007fd661275c80] = 1024
stub code [0x00007fd661275c80,0x00007fd661275d60] = 224
metadata [0x00007fd661275d60,0x00007fd661275d70] = 16
scopes data [0x00007fd661275d70,0x00007fd661275dc0] = 80
scopes pcs [0x00007fd661275dc0,0x00007fd661275eb0] = 240
dependencies [0x00007fd661275eb0,0x00007fd661275eb8] = 8
nul chk table [0x00007fd661275eb8,0x00007fd661275ed8] = 32
...
HelloWorld successfully execute when ran with "-Xint":
java -Xint -XX:+ZeroTLAB HelloWorld
Hello world!
JDK 8u45-fastdebug successfully executed with "-Xcomp -XX:+ZeroTLAB" options and HelloWorld class(but crashed without class, see below).
Also, different error reported when JDK 9-fastdebug ran without class specified:
java -Xcomp -XX:+ZeroTLAB
Exception in thread "main" java.lang.ExceptionInInitializerError
at sun.util.locale.provider.LocaleProviderAdapter.<clinit>(LocaleProviderAdapter.java:104)
at java.text.NumberFormat.getInstance(NumberFormat.java:859)
at java.text.NumberFormat.getInstance(NumberFormat.java:442)
at java.text.MessageFormat.subformat(MessageFormat.java:1271)
at java.text.MessageFormat.format(MessageFormat.java:865)
at java.text.Format.format(Format.java:157)
at java.text.MessageFormat.format(MessageFormat.java:841)
at sun.launcher.LauncherHelper.getLocalizedMessage(LauncherHelper.java:328)
at sun.launcher.LauncherHelper.initHelpMessage(LauncherHelper.java:341)
Caused by: java.lang.ArrayIndexOutOfBoundsException: -1163019586
at java.lang.AbstractStringBuilder.append(AbstractStringBuilder.java:626)
at java.lang.StringBuilder.append(StringBuilder.java:202)
at java.lang.invoke.LambdaForm.shortenSignature(LambdaForm.java:1367)
at java.lang.invoke.DirectMethodHandle.makePreparedLambdaForm(DirectMethodHandle.java:245)
at java.lang.invoke.DirectMethodHandle.preparedLambdaForm(DirectMethodHandle.java:188)
at java.lang.invoke.DirectMethodHandle.preparedLambdaForm(DirectMethodHandle.java:177)
at java.lang.invoke.DirectMethodHandle.make(DirectMethodHandle.java:84)
at java.lang.invoke.MethodHandles$Lookup.getDirectMethodCommon(MethodHandles.java:1656)
at java.lang.invoke.MethodHandles$Lookup.getDirectMethodNoSecurityManager(MethodHandles.java:1613)
at java.lang.invoke.MethodHandles$Lookup.getDirectMethodForConstant(MethodHandles.java:1798)
at java.lang.invoke.MethodHandles$Lookup.linkMethodHandleConstant(MethodHandles.java:1747)
at java.lang.invoke.MethodHandleNatives.linkMethodHandleConstant(MethodHandleNatives.java:399)
at sun.util.locale.provider.AuxLocaleProviderAdapter.<clinit>(AuxLocaleProviderAdapter.java:182)
... 9 more
JDK 8u45-fastdebug also affected, but crash reported in this case(without class name, hs_err_pid21138.log is attached):
java -Xcomp -XX:+ZeroTLAB
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fe1d8c9d368, pid=21138, tid=140608353769216
#
# JRE version: Java(TM) SE Runtime Environment (8.0_45-b33) (build 1.8.0_45-fastdebug-b33)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (25.45-b02-fastdebug compiled mode linux-amd64 compressed oops)
# Problematic frame:
# J 793 C2 java.lang.Class.getConstructor0([Ljava/lang/Class;I)Ljava/lang/reflect/Constructor; (103 bytes) @ 0x00007fe1d8c9d368 [0x00007fe1d8c9d320+0x48]
#
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/dmitry/bundles/jdk8u45/fastdebug/bin/hs_err_pid21138.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
- backported by
-
JDK-8098809 Address inconsistencies regarding ZeroTLAB
-
- Closed
-
-
JDK-8315216 Address inconsistencies regarding ZeroTLAB
-
- Closed
-
- duplicates
-
JDK-8305832 Fatal error with option '-XX:TLABWasteTargetPercent=73 -XX:+ZeroTLAB'
-
- Closed
-
- relates to
-
JDK-8169177 aarch64: SIGSEGV when "-XX:+ZeroTLAB" is specified along with GC options
-
- Resolved
-